--- a/index.html
+++ b/index.html
@@ -27,18 +27,68 @@
    <!-- CAIXA DO MENU PRINCIPAL -->
    <main id="area-principal">
        <section id="area-postagens">
+           <!-- INÍCIO  DA SECTION -->
            <article class="postagem"> 
                <h2 class="postagem-titulo">Título da Postagem 1</h2>
                <span class="postagem-data">Postado 23 de maio de 2022</span>
-               <img src="./img/imagem1.jpg">
+               <img src="./img/imagem2.jpg" alt="" class="postagem-imagem">
                <P>
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores quas, officiis doloribus modi temporibus cumque? Expedita, cumque corporis quaerat qui officiis voluptatum fuga ullam provident, reprehenderit ratione, iusto id quis!
                </P>
 
                <a href="#">Leia mais...</a>
            </article>
+           <!-- INÍCIO DO ARTICLE- PARTE lateral-->
        </section>
+<!-- FIM DA SECTION -->
+
+        <!-- ASIDE-Parte lateral/ INÍCIO DO 1° ARTICLE-->
+        <aside id="area-lateral">
+            <article class="conteudo-lateral">
+                <!-- SUBTÍTULO CAICA LATERAL -->
+                <h3 class="conteudo-lateral-titulo">Postagens Recentes</h3>
+                <!-- PRIMEIRA CAIXA DO CONTEÚDO LATERAL -->
+                <div class="texto-postagem-lateral">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, ducimus odit maxime ex quidem illo facilis cupiditate doloribus officia sunt nam, quisquam eum facere! Dolorum eaque eum earum ipsa facilis?</p>
+                  <a href="#">Leia mais...</a>
+                </div>
+                <!-- LINHA HORIZONTAL -->
+                <hr>
+                <!-- SEGUNDA CAIXA DO CONTEÚDO LATERAL -->
+                <div class="texto-postagem-lateral">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, ducimus odit maxime ex quidem illo facilis cupiditate doloribus officia sunt nam, quisquam eum facere! Dolorum eaque eum earum ipsa facilis?</p>
+                    <a href="#">Leia mais...</a>
+                  </div>
+            </article>
+            <!-- FIM DO  1° ARTICLE -->
+
+            <!-- INÍCIO  DO  2° ARTICLE -->
+            <article class="conteudo-lateral">
+                 <h3 class="conteudo-lateral-titulo">Categorias</h3>
+                  <!-- TITULO ASIDE LINKS -->
+                 <nav class="navegacao-lateral">
+                     <!-- LINKS ASIDE -->
+                     <a href="index.html">Home</a>
+                     <a href="Jogos.html">Jogos</a>
+                     <a href="Celulares.html">Celulares</a>
+                     <a href="Informatica.html">Informática</a>
+                     <a href="Eletronicos.html">Eletrônicos</a>
+                 </nav>
+            </article>
+            <!-- FIM DO  2° ARTICLE -->
+        </aside>
+        <!-- FIM DO ASIDE - Parte Lateral -->
    </main>
+   <!-- fim do main -->
+
+   <!-- INÍCIO DO FOOTER -->
+   <footer>
+    <P>Todos os direitos reservdos</P>
+   </footer>
+   <!-- FIM DO FOOTER -->
+
     </nav>
 </body>
+<!-- FIM DO BODY -->
 </html>
+<!-- FIM DO HTML -->
