--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <section id="area-postagens">
            <!-- INÍCIO  DA SECTION -->
            <article class="postagem"> 
-               <h2 class="postagem-titulo">Título da Postagem 1</h2>
+               <h2 class="postagem-titulo">Novidades</h2>
                <span class="postagem-data">Postado 23 de maio de 2022</span>
                <img src="./img/imagem1.jpg" alt="" class="postagem-imagem">
                <P>
